Add proper styles for banner

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -8,6 +8,7 @@
 @import './header';
 @import './filterpanel';
 @import './availablevaults';
+@import './banner';
 @import './tokenpaircard';
 @import './instabuylp';
 @import './instabuylpcard';
