--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -44,6 +44,7 @@
 @import './vaulthistoryCard';
 @import './vaultSetupContainer';
 @import './errorPage';
+@import './adminFormPage';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Bold', '../assets/fonts/Poppins-Bold');
