--- a/src/scss/_tokenpaircard.scss
+++ b/src/scss/_tokenpaircard.scss
@@ -44,10 +44,11 @@
       border: 1px solid rgba(#4c646f, 0.4);
       border-radius: 100%; 
       padding: 2px;
-      background-color: white;
+      // background-color: white;
     }
     &-icon {
       margin-left: -10px;
+      background-color: white;
      
     }
     .highRisk {
