--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -7,7 +7,7 @@
 @import './footer';
 @import './header';
 @import './filterpanel';
-@import './availablevaults';
+@import './allvaults';
 @import './tokenpaircard';
 @import './instabuylp';
 @import './instabuylpcard';
