RFM-628 feat: create progress bar component with dumby data

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -2,6 +2,7 @@
 @import './layer';
 @import './navbar';
 @import './navbarItem';
+@import './navbarProgressBar';
 @import './font-face';
 @import './button';
 @import './footer';
