sidebar and filter

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,15 @@
-@import './scss/styles';
 @import 'react-bootstrap-table-next/dist/react-bootstrap-table2.min.css';
+@import 'bootstrap/dist/css/bootstrap.min.css';
+@import './scss/styles';
+@import 'bootstrap/scss/bootstrap';
+@import "bootstrap/scss/functions";
+@import "bootstrap/scss/variables";
+
+$grid-breakpoints: (
+  xs: 479px,
+  sm: 767px,
+  md: 991px,
+  lg: 1280px,
+  xl: 1350px,
+  xxl: 1539px
+);
