--- a/src/scss/_filterpanel.scss
+++ b/src/scss/_filterpanel.scss
@@ -48,7 +48,10 @@
   &__sortby , &__viewby {
     font-family: 'Poppins-Regular';
     color: var(--unnamed-color-3c4760);
-    font-size: 16px;
+    font-size: 0.75rem;
+    @include respond-to(sm) {
+      margin-top: 0.5rem;
+    }
   }
   &__viewtype {
     opacity: 0.4;
@@ -127,6 +130,9 @@
       border: 1px solid rgba(var(--secondary-border), 0.2);
       &:hover {
         border: 1px solid rgba(var(--secondary-border), 0.2);
+      }
+      @include respond-to(sm) {
+        margin-left: 0rem;
       }
     }
     &__menu {
