--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -15,19 +15,27 @@
   bottom: 0px;
   &--collapse {
     width: 120px;
+
+    
     &:before {
       width: 120px !important;
+      box-shadow: var(--nav-boxshadow);
     }
   }
 
-  @include respond-to(sm) {
+  @include respond-to(md) {
     position: absolute;
     padding-top: 0px;
-    top: 110px;
+    text-align: left;
+    top: 0px;
     background-color: var(--background);
     z-index: 3;
-    width: 100%;
-    box-shadow: none;
+    width: 50%;
+    height: 100%;
+    box-shadow: var(--nav-boxshadow);
+    @include respond-to(sm) {
+      width: 100%;
+    }
     -webkit-transform: translate3d(-100%, 0px, 0px);
     transform: translate3d(-100%, 0px, 0px);
     visibility: visible;
@@ -36,7 +44,7 @@
   }
 
   &::before {
-    @include respond-to(sm) {
+    @include respond-to(md) {
       display: none;
     }
     content: '';
