--- a/src/scss/_tokenpaircard.scss
+++ b/src/scss/_tokenpaircard.scss
@@ -76,7 +76,7 @@
     }
   }
   &__titleBox {
-    margin-top: 1rem;
+    margin-left: 1rem;
     h6 {
       font-family: 'Poppins-SemiBold';
       font-size: 1rem;
