--- a/src/scss/_customInput.scss
+++ b/src/scss/_customInput.scss
@@ -48,7 +48,8 @@
       font-family: 'Poppins-Medium';
       font-size: 15px;
       color: white;
-      background: linear-gradient(90deg, #ff69ce 0%, #bc5cf7 100%) 0% 0% no-repeat padding-box;
+      // background-image: url('../assets/images/btn-bg.svg');
+      background: linear-gradient(150deg, #5FB5FF 0%, #075FE5 100%) 0% 0% no-repeat padding-box;
       border: 0px;
     }
   }
