--- a/src/scss/_modalCard.scss
+++ b/src/scss/_modalCard.scss
@@ -44,6 +44,11 @@
       padding: 2px;
       background-color: white;
     }
+    label {
+      font-size: 14px;
+      color: var(--unnamed-color-4c646f);
+      margin-bottom: 3px;
+    }
     &-icon {
       margin-left: -10px;
     }
@@ -72,6 +77,13 @@
     border-bottom-left-radius: 16px;
     border-bottom-right-radius: 16px;
     padding: 20px;
+    img {
+      width: 40px;
+      border: 1px solid rgba(#4c646f, 0.4);
+      border-radius: 100%; 
+      padding: 2px;
+      background-color: white;
+    }
     label {
       font-size: 14px;
       color: var(--unnamed-color-4c646f);
