--- a/src/scss/_amountPanel.scss
+++ b/src/scss/_amountPanel.scss
@@ -19,6 +19,11 @@
     color: var(--unnamed-color-3c4760);
   }
 
+  &__icon {
+    height: 40px;
+    margin-right: 0.2rem;
+  }
+
   .lastToken {
     margin-left: -5px;
     margin-right: 10px;
