--- a/src/scss/_modalCard.scss
+++ b/src/scss/_modalCard.scss
@@ -38,11 +38,11 @@
     display: flex;
     justify-content: space-between;
     img {
-      width: 40px;
-      border: 1px solid rgba(#4c646f, 0.4);
-      border-radius: 100%; 
-      padding: 2px;
-      background-color: white;
+      height: 40px;
+      // border: 1px solid rgba(#4c646f, 0.4);
+      // border-radius: 100%; 
+      // padding: 2px;
+      // background-color: white;
     }
     label {
       font-size: 14px;
