--- a/src/scss/_tokenpaircard.scss
+++ b/src/scss/_tokenpaircard.scss
@@ -70,9 +70,9 @@
     display: flex;
     justify-content: space-between;
     img {
-      width: 40px;
-      border: 1px solid rgba(#4c646f, 0.4);
-      border-radius: 100%; 
+      height: 40px;
+      // border: 1px solid rgba(#4c646f, 0.4);
+      // border-radius: 100%; 
       padding: 2px;
       // background-color: white;
     }
