--- a/src/scss/_vaultdashboard.scss
+++ b/src/scss/_vaultdashboard.scss
@@ -106,6 +106,8 @@
   &__bodyright {
     margin-bottom: 50px;
     padding: 0px 0px !important;
+    margin-left: 15px;
+    margin-right: 15px;
     margin-top: 2rem;
     border: 1px solid rgba(#214769, 0.2);
     border-radius: 25px;
