--- a/src/scss/_filterpanel.scss
+++ b/src/scss/_filterpanel.scss
@@ -1,6 +1,9 @@
 .filterpanel {
   margin-left: 10px;
   margin-right: 10px;
+  &__gap {
+    gap: 0.75rem;
+  }
   .less-right-margin {
     margin-right: 32px;
   }
@@ -49,10 +52,7 @@
     font-family: 'Poppins-Regular';
     color: var(--unnamed-color-3c4760);
     font-size: 0.75rem;
-    @include respond-to(sm) {
-      margin-top: 0.5rem;
-    }
-  }
+   }
   &__viewtype {
     opacity: 0.4;
     cursor: pointer;
@@ -136,7 +136,7 @@
       }
     }
     &__menu {
-      width: 150px;
+      // width: 150px;
       background-color: var(--unnamed-color-1B1E29);
     }
     &__input {
