--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -32,7 +32,7 @@
     top: 0px;
     background-color: var(--background);
     z-index: 3;
-    width: 50%;
+    width: 300px;
     height: 100%;
     box-shadow: var(--nav-boxshadow);
     @include respond-to(sm) {
