--- a/src/scss/_screensize.scss
+++ b/src/scss/_screensize.scss
@@ -3,16 +3,16 @@ $xl: 1350px;
 $lg: 1280px;
 $md: 991px;
 $sm: 767px;
-$xs: 479px;
+$xs: 0px;
 
 @mixin respond-to($media, $width: normal) {
   @if ($width == normal) {
-    @if ($media == xl) {
-      @media only screen and (max-width: $xl) {
+    @if ($media == xxl) {
+      @media only screen and (max-width: $xxl) {
         @content;
       }
-    } @else if ($media == l) {
-      @media only screen and (max-width: $lg) {
+    } @else if ($media == xl) {
+      @media only screen and (max-width: $xl) {
         @content;
       }
     } @else if ($media == lg) {
