--- a/src/scss/_tokenpaircard.scss
+++ b/src/scss/_tokenpaircard.scss
@@ -69,15 +69,10 @@
     padding: 20px;
     display: flex;
     justify-content: space-between;
-    img {
-      height: 40px;
-      // border: 1px solid rgba(#4c646f, 0.4);
-      // border-radius: 100%; 
-      padding: 2px;
-      // background-color: white;
-    }
+    flex-wrap: wrap;
+    gap: 12px;
     &-icon {
-      margin-left: -10px;
+      height: 40px;
       background-color: white;
      
     }
@@ -119,6 +114,7 @@
     }
     img {
       width: 15px;
+      height: auto;
       border: none;
     }
     .DDD {
