--- a/src/scss/_allvaults.scss
+++ b/src/scss/_allvaults.scss
@@ -68,7 +68,7 @@
       width: 10rem;
     }
     &__icon {
-      height: 40px;
+      width: 3.75rem;
     }
     .expand_arrow {
       cursor: pointer;
