--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -99,6 +99,7 @@
   --unnamed-color-f8f9f9: #1b1e29;
   --unnamed-color-17161f: #17161f;
   --unnamed-color-bg: #ffffff;
+  --primary-color-bg: 23, 22, 31;
 }
 
 [data-theme='light'] {
@@ -122,9 +123,10 @@
   --unnamed-color-1B1E29: #ffffff;
   --unnamed-color-f9fbfe: #4e667133;
   --unnamed-color-f8f9f9: #f8f9f9;
-  --unnamed-color-171A23: rgba(255, 224, 226, 0.33);
+  --unnamed-color-171A23: rgba(219, 224, 226, 0.2);
   --unnamed-color-bg: rgb(0, 35, 50, 0.4);
   --unnamed-color-17161f: #ffffff;
+  --primary-color-bg: 219, 224, 226;
 }
 
 // --unnamed-color-002332: #002332;
