fixed vault history table and RFM-774

--- a/src/scss/_vaulthistorytable.scss
+++ b/src/scss/_vaulthistorytable.scss
@@ -4,6 +4,10 @@
     padding-left: 0px;
     padding-right: 0px;
   }
+  h6 {
+    font-family: 'Poppins-Regular';
+    font-size: 1rem;
+  }
   h4 {
     font-family: 'Poppins-Medium';
     letter-spacing: -0.36px;
