--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -89,12 +89,27 @@
     left: 0;
     right: 0;
     hr {
+      position: relative;
       border-top: 1px solid var(--unnamed-color-f9fbfe);
       &::before {
         content: 'My Overview';
         position: absolute;
         left: 30px;
-        top: 5px;
+        top: -12px;
+        background-color: var(--unnamed-color-17161f);
+        padding: 0px 8px;
+        font-family: 'Poppins-Medium';
+        font-size: 12px;
+        color: var(--unnamed-color-3c4760);
+      }
+    }
+    .ratio-platform {
+      position: relative;
+      &::before {
+        content: 'Ratio Platform';
+        position: absolute;
+        left: 30px;
+        top: -11px;
         background-color: var(--unnamed-color-17161f);
         padding: 0px 8px;
         font-family: 'Poppins-Medium';
