--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -49,6 +49,7 @@
 @import './errorPage';
 @import './adminFormPage';
 @import './_walletBalance';
+@import './tokensEarned';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Bold', '../assets/fonts/Poppins-Bold');
