fixed design issues

--- a/src/scss/_activePairCard.scss
+++ b/src/scss/_activePairCard.scss
@@ -92,6 +92,9 @@
       color: var(--unnamed-color-3c4760);
       margin-bottom: 0px;
       font-family: 'Poppins-Medium';
+      a {
+        color: var(--unnamed-color-3c4760);
+      }
     }
     .semiBold {
       font-family: 'Poppins-SemiBold';
