--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -89,7 +89,7 @@
   --unnamed-color-ff69ce: #ff69ce;
   --unnamed-color-bc5cf7: #bc5cf7;
   --unnamed-color-0f6eff: #ffffff;
-  --unnamed-color-5fb5ff: #5fb5ff;
+  --unnamed-color-5fb5ff: #2E5FE2;
   --unnamed-color-ff3131: #ff3131;
   --unnamed-color-07b127: #07b127;
   --unnamed-color-3c4760: #ffffff;
