--- a/src/scss/_filterpanel.scss
+++ b/src/scss/_filterpanel.scss
@@ -1,6 +1,6 @@
 .filterpanel {
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 1rem;
+  margin-right: 1rem;
   &__gap {
     gap: 0.75rem;
   }
