--- a/src/scss/_tokenpaircard.scss
+++ b/src/scss/_tokenpaircard.scss
@@ -64,6 +64,7 @@
     font-size: 15px;
     padding: 0.7rem 1.5rem;
     width: 100%;
+    min-width: 150px;
   }
   &__header {
     padding: 20px;
