feat: added active sticker

--- a/src/scss/_activePairCard.scss
+++ b/src/scss/_activePairCard.scss
@@ -12,6 +12,7 @@
     font-size: 15px;
     padding: 0.7rem 1.5rem;
     width: 100%;
+    white-space: nowrap;
   }
   // height: calc(100% - 26px);
   &--warning {
