--- a/src/scss/_dashboardModal.scss
+++ b/src/scss/_dashboardModal.scss
@@ -72,6 +72,13 @@
         color: #4c646f;
         margin-bottom: 10px;
       }
+      h6 {
+        font-family: 'Poppins-Regular';
+        font-size: 14px;
+        color: #4c646f;
+        margin-bottom: 0px;
+        margin-top: 1.2rem;
+      }
       &-red {
         margin-top: 10px;
         font-size: 14px;
