--- a/src/scss/_amountPanel.scss
+++ b/src/scss/_amountPanel.scss
@@ -4,8 +4,8 @@
     font-family: 'Poppins-Medium';
     font-size: 18px;
     color: var(--unnamed-color-3c4760);
-    margin-top: 2rem;
-    margin-left: 1.5rem;
+    margin-top: 1.5rem;
+    margin-left: 1rem;
     margin-bottom: 0.5rem;
   }
 
@@ -45,8 +45,8 @@
   table td,
   .table th {
     border-top: 0px;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    padding-left: 1rem;
+    // padding-right: 1.5rem;
   }
   .table th {
     padding-bottom: 0.5rem;
