fix: removed details in vaultsetup container

--- a/src/scss/_vaultSetupContainer.scss
+++ b/src/scss/_vaultSetupContainer.scss
@@ -30,7 +30,7 @@
         border-bottom-right-radius: 1rem;
     }
     .setup {
-        margin-top: 16px;
+        // margin-top: 16px;
         font-family: 'Poppins-Medium';
         font-size: 15px;
         padding: 0.9rem 0rem;
