--- a/src/scss/_vaulthistorytable.scss
+++ b/src/scss/_vaulthistorytable.scss
@@ -22,6 +22,8 @@
       border-top: 0px;
       padding-left: 1rem;
       padding-right: 1rem;
+      font-size: 'Poppins-Medium';
+      color: var(--unnamed-color-4c646f);
     }
     .table th {
       padding-bottom: 0.5rem;
