--- a/src/scss/_tasktable.scss
+++ b/src/scss/_tasktable.scss
@@ -45,5 +45,22 @@
         font-size: 0.875rem;
         letter-spacing: -0.28px;
         color: var(--unnamed-color-002332);
+        padding-top: 1.125rem;
+    }
+    .table-striped tbody tr:nth-of-type(odd) {
+        background: var(--unnamed-color-f8f9f9);
+    }
+
+    &__status {
+        img {
+            margin-right: 0.5rem;
+            margin-top: -1px;
+        }
+        &--complete {
+            color: var(--unnamed-color-07b127);
+        }
+        &--notcomplete {
+            color: var(--unnamed-color-ff3131);
+        }
     }
 }
