feat: updated fairdrop page

--- a/src/scss/_roundbox.scss
+++ b/src/scss/_roundbox.scss
@@ -9,9 +9,23 @@
         h5 {
             color: var(--unnamed-color-3c4760);
             font-size: 1rem;
+            margin-right: 0.5rem;
         }
         &--danger {
             border-color: var(--unnamed-color-ff3131);
+        }
+        &--info {
+            cursor: pointer;
+            &:hover {
+                opacity: 0.8;
+            }
+        }
+        &--tooltip {
+            & > div {
+                display: flex;
+                font-size: 0.75rem;
+                font-family: 'Poppins-Regular';
+            }
         }
     }
     &__bottom {
@@ -33,6 +47,7 @@
             font-size: 1rem;
             font-family: 'Poppins-Semibold';
             margin:0px;
+            color: var(--unnamed-color-002332);
         }
     }
     &__countdown {
@@ -42,22 +57,26 @@
         h5 {
             font-family: 'Poppins-Regular';
             font-size: 0.813rem;
+            color: var(--unnamed-color-002332);
         }
         h3 {
             font-family: 'Poppins-Medium';
             font-size: 1.75rem;
             margin-bottom: 0px;
             text-align: center;
+            color: var(--unnamed-color-002332);
         }
         h4 {
             padding-left: 0.6rem;
             padding-right: 0.6rem;
+            color: var(--unnamed-color-002332);
         }
         h6 {
             font-size: 0.68rem;
             font-family: 'Poppins-Light';
             margin-top: 0px;
             text-align: center;
+            color: var(--unnamed-color-002332);
         }
     }
 }
