--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -153,7 +153,7 @@ input {
 }
 
 .tooltip-inner {
-  max-width: 250px !important;
+  max-width: initial !important;
   padding: 16px !important;
   // font-family: 'Poppins-Regular' !important;
   font-size: 12px !important;
