--- a/src/scss/_tasktable.scss
+++ b/src/scss/_tasktable.scss
@@ -4,6 +4,7 @@
         font-size: 0.75rem;
         font-family: 'Poppins-Regular';
         border-bottom: none;
+        color: var(--unnamed-color-727c81);
     }
 
     $border-radius-value: 8px;
