--- a/src/scss/_totalrewards.scss
+++ b/src/scss/_totalrewards.scss
@@ -59,6 +59,7 @@
        font-size: 1rem;
        margin-left: 0.5rem;
        letter-spacing: -0.32px;
+       color: var(--unnamed-color-002332);
    }
    &__completed {
        font-family: 'Poppins-Semibold';
