--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -107,6 +107,7 @@
     padding: 0.8rem 2rem;
   }
   .switchBtn {
+    margin-left: 1rem;
     margin-right: 1rem;
     margin-top: 6px;
     cursor: pointer;
