feat: switching network

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -56,6 +56,7 @@
 @import './progressbox';
 @import './claimbox';
 @import './_totalrewards';
+@import './_networkSelector';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Bold', '../assets/fonts/Poppins-Bold');
