--- a/src/scss/_dashboardModal.scss
+++ b/src/scss/_dashboardModal.scss
@@ -26,12 +26,7 @@
       padding-bottom: 0px;
       position: relative;
       img {
-        width: 48px;
-        height: 48px;
-        border: 1px solid rgba(#4c646f, 0.4);
-        border-radius: 100%; 
-        padding: 2px;
-        background-color: white;
+        height: 3rem;
       }
       h4 {
         font-family: 'Poppins-SemiBold';
