feat: vault mint USDr progressbar

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -57,6 +57,7 @@
 @import './claimbox';
 @import './_totalrewards';
 @import './_networkSelector';
+@import './mintableProgressbar';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Bold', '../assets/fonts/Poppins-Bold');
