--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,17 +1,17 @@
 .header {
-  padding-top: 1rem;
+  padding-top: 2rem;
   padding-bottom: 1rem;
-  padding-right: 6rem;
+  padding-right: 3rem;
   justify-content: flex-end;
   align-items: center;
   background-color: var(--background);
-  @include respond-to(sm) {
+  @include respond-to(lg) {
     padding-top: 2rem;
-    padding-bottom: 2rem;
+    padding-bottom: 0.5rem;
     padding-right: 10px;
     padding-left: 10px;
     justify-content: space-between;
-    border-bottom: 1px solid var(--unnamed-color-f9fbfe);
+    // border-bottom: 1px solid var(--unnamed-color-f9fbfe);
     img {
       width: 150px;
     }
@@ -42,7 +42,7 @@
   }
 
   &__debt {
-    margin-right: 1rem;
+    // margin-right: 1rem;
     cursor: default !important;
     &::before {
       content: 'Total USDr Debt' !important;
@@ -110,12 +110,15 @@
     margin-right: 1rem;
     margin-top: 6px;
     cursor: pointer;
-    @include respond-to(sm) {
-      margin-right: 0.3rem;
-      img {
-        width: auto;
-      }
+    &__icon {
+      width: 35px;
     }
+    // @include respond-to(sm) {
+    //   margin-right: 0.3rem;
+    //   img {
+    //     width: auto;
+    //   }
+    // }
     &:hover {
       opacity: 0.8;
     }
