--- a/src/scss/_vaultdashboard.scss
+++ b/src/scss/_vaultdashboard.scss
@@ -14,30 +14,35 @@
       @include respond-to(lg) {
         padding: 2rem 2rem !important;
         width: 100%;
+        .row [class*='col']{
+          padding-left: 0;
+          padding-right: 0;
+        }
       }
       @include respond-to(sm) {
         padding-top: 0rem;
-        border-top: 0px;
+        // border-top: 0px;
+        
       }
       h3 {
         font-family: 'Poppins-Medium';
         color: var(--unnamed-color-3c4760);
         font-size: 24px;
         margin-bottom: 24px;
-        @include respond-to(sm) {
+        @include respond-to(lg) {
           margin-bottom: 12px;
         }
       }
       a {
         display: block;
         color: var(--unnamed-color-4c646f);
-        text-align: right;
+        // text-align: right;
         &:hover {
           color: var(--unnamed-color-4c646f);
         }
-        @include respond-to(sm) {
+        @include respond-to(lg) {
           text-align: left;
-          margin-bottom: 12px;
+          margin-bottom: 20px;
         }
       }
     }
