feat: added warningbox in vaultsetup

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -58,6 +58,7 @@
 @import './_totalrewards';
 @import './_networkSelector';
 @import './mintableProgressbar';
+@import './warningLimitBox';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Bold', '../assets/fonts/Poppins-Bold');
