--- a/src/scss/_vaultdashboard.scss
+++ b/src/scss/_vaultdashboard.scss
@@ -66,6 +66,7 @@
         display: block;
         color: var(--unnamed-color-4c646f);
         text-align: right;
+        margin-bottom: 0px;
         &:hover {
           color: var(--unnamed-color-4c646f);
         }
