--- a/src/scss/_walletBalance.scss
+++ b/src/scss/_walletBalance.scss
@@ -54,5 +54,6 @@
         color: var(--unnamed-color-3c4760);
         font-weight: 400;
         font-size: 12px;
+        border-bottom: 2px solid var(--unnamed-color-f9fbfe);
     }
 }
