--- a/src/scss/_banner.scss
+++ b/src/scss/_banner.scss
@@ -37,12 +37,12 @@ div.debt-limit-reached {
   }
 }
 
-div.warning-limit-reached {
+div.warning-debt-limit-reached {
   top: 35px;
   width: 100%;
   height: 56px;
   background: var(--unnamed-color-ff3131) 0% 0% no-repeat padding-box;
-  background: #ffb731 0% 0% no-repeat padding-box;
+  background: #F48C57 0% 0% no-repeat padding-box;
   opacity: 1;
   margin-bottom: 24px;
 
