feat: add slider in modal

--- a/src/scss/_styles.scss
+++ b/src/scss/_styles.scss
@@ -59,6 +59,7 @@
 @import './_networkSelector';
 @import './mintableProgressbar';
 @import './warningLimitBox';
+@import './amountSlider';
 
 @include font-face('Poppins-SemiBold', '../assets/fonts/Poppins-SemiBold');
 @include font-face('Poppins-Bold', '../assets/fonts/Poppins-Bold');
