feat: added slider in modal

--- a/src/scss/_vaulthistorytable.scss
+++ b/src/scss/_vaulthistorytable.scss
@@ -33,7 +33,7 @@
       border-bottom: 2px solid var(--unnamed-color-f9fbfe);
     }
     .activity {
-      font-family: 'Poppins-SemiBold';
+      font-family: 'Poppins-Regular';
       font-size: 14px;
       color: var(--unnamed-color-3c4760);
     }
