--- a/src/scss/_amountSlider.scss
+++ b/src/scss/_amountSlider.scss
@@ -21,25 +21,27 @@
             bottom: -0.438rem;
         }
         &-track {
-            background-color: var(--unnamed-color-0f6eff);
+            background-color: #0f6eff;
+            height: 0.313rem;
         }
         &-handle {
-            border-color: var(--unnamed-color-0f6eff);
+            border-color: #0f6eff;
             border: none;
-            background-color: var(--unnamed-color-0f6eff);
+            background-color: #0f6eff;
             opacity: 1;
             width: 1rem;
             height: 1rem;
             margin-top: -6px;
             &-dragging {
                 border-color: var(--unnamed-color-0f6eff) !important;
-                box-shadow: 0 0 0 5px var(--unnamed-color-0f6eff) !important;
-                opacity: 0.3;
+                box-shadow: 0 0 0 5px rgba(#0f6eff, 0.3) !important;
+                background-color: #0f6eff;
+                // opacity: 0.3;
             }
         }
         &-dot-active {
-            border-color: var(--unnamed-color-0f6eff);
-            background-color: var(--unnamed-color-0f6eff);
+            border-color: #0f6eff;;
+            background-color: #0f6eff;;
         }
         &-mark {
             top: -1.5rem;
