--- a/src/scss/_customInput.scss
+++ b/src/scss/_customInput.scss
@@ -13,6 +13,9 @@
       background-color: var(--unnamed-color-17161f);
       color: var(--unnamed-color-3c4760);
     }
+    &::placeholder {
+      opacity: 0.8;
+    }
   }
   .onlytext {
     border-right: 1px solid rgba(#4c646f, 0.2);
